actualización botones/tabla
sad

--- a/public/libs/css/css/pedidos.css
+++ b/public/libs/css/css/pedidos.css
@@ -5,8 +5,12 @@ body{
     background-color: #b5e8c3 !important;
 }
 .table {
-    margin-top: 3rem;
+    margin-top: 2rem;
+    padding: 3rem;
 }
 .button-add-rep{
-    margin-top: 4rem;
+    margin-top: 3rem;
+}
+.table-content{
+    padding: 2rem;
 }
